adding the compiled book version 1

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@
 !_build+deploy.R
 !_feedback.sh
 !_rundock.sh
-!_book/**
+!_book/
+!_book/*
+!_book/*/*
+!_book/*/*/*
 !docs/
 !docs/*
 !docs/*/*
