--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,5 @@
 bookdown::gitbook:
-  number_sections: FALSE
+  number_sections: TRUE
   dev: svglite
   split_by: chapter
   split_bib: TRUE
@@ -9,12 +9,12 @@ bookdown::gitbook:
       collapse: section
       scroll_highlight: yes
       before: |
-        <li><a href="./">Oski Bear</a></li>
+        <li><a href="./">Sophia Cui</a></li>
       after: |
-        <li><a href="https://github.com/oskibear" target="blank">GitHub</a></li>
-        <li><a href="https://www.ischool.berkeley.edu/people/oski-bear" target="blank">UC Berkeley</a></li>
-        <li><a href="https://www.linkedin.com/in/oskibear/" target="blank">LinkedIn</a></li>
-        <li><a href="https://www.wired.com/2013/02/friendster-autopsy/" target="blank">Friendster</a></li>        
+        <li><a href="https://github.com/sxc2" target="blank">GitHub</a></li>
+        <li><a href="https://www.ischool.berkeley.edu/people/sophia-cui" target="blank">UC Berkeley</a></li>
+        <li><a href="https://www.linkedin.com/in/sophia-cui/" target="blank">LinkedIn</a></li>
+        <li><a href="trueachievements.com/gamer/s0phia" target="blank">Xbox</a></li>        
     sharing:
       facebook: no
       twitter: no
@@ -23,5 +23,5 @@ bookdown::gitbook:
       instapper: no
       vk: no
       all: no
-    edit: https://github.com/w201rdada/portfolio-MYGITHUBUSER/edit/master/%s
+    edit: https://github.com/w201rdada/portfolio-sxc2/edit/master/%s
     download: null
