updating book pages and page numbering 3

--- a/_output.yml
+++ b/_output.yml
@@ -9,12 +9,12 @@ bookdown::gitbook:
       collapse: section
       scroll_highlight: yes
       before: |
-        <li><a href="./">Sophia Cui</a></li>
+        <li><a href="./">Sophia Cui <i class="fa fa-heart fa-fw" style="color:pink;"></i></a></li>
       after: |
         <li><a href="https://github.com/sxc2" target="blank">GitHub</a></li>
         <li><a href="https://www.ischool.berkeley.edu/people/sophia-cui" target="blank">UC Berkeley</a></li>
         <li><a href="https://www.linkedin.com/in/sophia-cui/" target="blank">LinkedIn</a></li>
-        <li><a href="trueachievements.com/gamer/s0phia" target="blank">Xbox</a></li>        
+        <li><a href="https://www.trueachievements.com/gamer/s0phia" target="blank">Xbox</a></li>        
     sharing:
       facebook: no
       twitter: no
